@@ -57,7 +57,6 @@ import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 @SuppressWarnings("unused")
 class SearchableSearchProvider implements SearchProvider {
@@ -183,7 +182,7 @@ class SearchableSearchProvider implements SearchProvider {
 
         final FindFieldCriteria findFieldInfoCriteria = new FindFieldCriteria(
                 new PageRequest(0, 1000),
-                null,
+                FindFieldCriteria.DEFAULT_SORT_LIST,
                 docRef);
         final ResultPage<QueryField> resultPage = searchable.getFieldInfo(findFieldInfoCriteria);
         final Runnable runnable = taskContextFactory.context(taskName, taskContext -> {
@@ -272,7 +271,7 @@ class SearchableSearchProvider implements SearchProvider {
                 return Sizes.create(Arrays.stream(value.split(","))
                         .map(String::trim)
                         .map(Long::valueOf)
-                        .collect(Collectors.toList()));
+                        .toList());
             } catch (final Exception e) {
                 LOGGER.warn(e.getMessage());
             }
